[gd_scene load_steps=10 format=3 uid="uid://yn0fjsd72sks"]

[ext_resource type="Script" uid="uid://wga4gmjt0v7n" path="res://scenes/Background/background.gd" id="1_pxulu"]
[ext_resource type="Texture2D" uid="uid://b6jq260f8ahhx" path="res://assets/logo.png" id="2_n4vpf"]
[ext_resource type="FontFile" uid="uid://c071ukeci0smi" path="res://assets/OldSchoolAdventures-42j9.ttf" id="3_hikit"]
[ext_resource type="Texture2D" uid="uid://oy18whlmrufc" path="res://assets/sky.png" id="4_pxulu"]
[ext_resource type="Texture2D" uid="uid://dht85orwv2xdj" path="res://assets/grass-bg.png" id="5_o74i5"]
[ext_resource type="Texture2D" uid="uid://cle4hlf0kinru" path="res://assets/beach-bg.png" id="6_5c4u4"]
[ext_resource type="Texture2D" uid="uid://c0vp1l6mmuib8" path="res://assets/sand.png" id="6_n4vpf"]
[ext_resource type="Script" uid="uid://c3qxqx1qtbg3m" path="res://scenes/Main/water.gd" id="7_2aat8"]
[ext_resource type="PackedScene" uid="uid://c6k6mwbbr5xrq" path="res://scenes/WaterBody/water_body.tscn" id="8_ov45e"]

[node name="Background" type="Node2D"]
script = ExtResource("1_pxulu")

[node name="Logo" type="TextureRect" parent="."]
z_index = 50
texture_filter = 1
offset_left = 83.0
offset_top = 18.0
offset_right = 237.0
offset_bottom = 68.0
texture = ExtResource("2_n4vpf")
expand_mode = 1

[node name="StartInfo" type="RichTextLabel" parent="."]
z_index = 30
texture_filter = 1
offset_top = 135.0
offset_right = 320.0
offset_bottom = 149.0
theme_override_colors/default_color = Color(1, 128.498, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_hikit")
theme_override_font_sizes/normal_font_size = 7
theme_override_font_sizes/bold_font_size = 7
text = "PRESS TO START"
scroll_active = false
horizontal_alignment = 1

[node name="Sky-BG" type="TextureRect" parent="."]
z_index = -1
texture_filter = 1
offset_left = -319.0
offset_right = 960.0
offset_bottom = 56.0
mouse_filter = 2
texture = ExtResource("4_pxulu")
stretch_mode = 1

[node name="Sky" type="Parallax2D" parent="."]
repeat_size = Vector2(640, 0)

[node name="Sky2" type="Parallax2D" parent="."]
repeat_size = Vector2(640, 0)

[node name="Sky3" type="Parallax2D" parent="."]
repeat_size = Vector2(640, 0)

[node name="Grass" type="Parallax2D" parent="."]
repeat_size = Vector2(320, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Grass"]
z_index = -1
texture_filter = 1
texture_repeat = 1
position = Vector2(0, 56)
texture = ExtResource("5_o74i5")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="Grass"]
z_index = -1
texture_filter = 1
texture_repeat = 1
position = Vector2(0, 69)
texture = ExtResource("5_o74i5")
centered = false

[node name="Beach" type="Parallax2D" parent="."]
repeat_size = Vector2(630, 0)
repeat_times = 2

[node name="Sprite2D" type="Sprite2D" parent="Beach"]
z_index = -1
texture_filter = 1
position = Vector2(0, 75)
texture = ExtResource("6_n4vpf")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="Beach"]
visible = false
z_index = -1
texture_filter = 1
position = Vector2(-1, 75)
texture = ExtResource("6_5c4u4")
centered = false

[node name="Sprite2D3" type="Sprite2D" parent="Beach"]
visible = false
z_index = -1
texture_filter = 1
position = Vector2(-2, 96)
texture = ExtResource("6_5c4u4")
centered = false

[node name="Water" type="Node2D" parent="."]
z_as_relative = false
texture_filter = 1
position = Vector2(-336, 0)
script = ExtResource("7_2aat8")

[node name="RearLayer" parent="Water" instance=ExtResource("8_ov45e")]
z_as_relative = false
position = Vector2(0, 90)
springNumber = 24

[node name="FrontLayer" parent="Water" instance=ExtResource("8_ov45e")]
z_index = 12
z_as_relative = false
position = Vector2(0, 90)
springNumber = 24
